fixed dropdown z-index

--- a/scss/modules/dropdown.scss
+++ b/scss/modules/dropdown.scss
@@ -31,7 +31,7 @@
     margin-bottom: 40px;
     background-color: $white;
     border: 1px solid $grayLighter;
-    z-index: 2000;
+    z-index: 90;
     border-radius: $dropdownBorderRadius;
 
     & > ul {
